ecmascript/parser/tests/test262-error-references/fail/7187f0675eb38279.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/7187f0675eb38279.js:1:7
  |
1 | return
  |       ^

error: Return statement is not allowed here
 --> $DIR/tests/test262-parser/fail/7187f0675eb38279.js:1:1
  |
1 | return
  | ^^^^^^

